# Fisching-Overhaul

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  main.py  pyproject.toml  start_game.py  start_game_dev.py  wiki.txt
bestiary_rewards/: COSMETICS.md  README.md  cosmetic_color_fish_all_100.json  cosmetic_icon_pools_100.json  fish_all_100.json  fish_mar_100.json  pool_aguas_calmas_100.json  pool_angra_cristal_100.json  pool_as_profundezas_100.json  pool_baiadosol_100.json  pool_cafeteria_100.json  pool_caverna_carmesim_100.json  pool_caverna_luminosa_100.json  pool_farseas_100.json  pool_grande_recife_100.json  pool_lagoa_tranquila_100.json  pool_mar_aberto_100.json  pool_o_jardim_100.json  pool_pantano_mushgrove_100.json  pool_ponto_zero_100.json  pool_profundezas_desoladas_100.json  pool_rachadura_vulcanica_100.json  pool_rio_correnteza_100.json  pool_salmoura_100.json  pool_snowcap_100.json  pool_templomicelio_100.json  pool_vertigo_100.json  pool_vulcaodosol_100.json  pool_zenite_abissal_100.json  pool_zona_glacial_100.json  pools_100.json  rods_100.json
config/: shiny.json
cosmetics_catalog/: ui_colors.json  ui_icons.json
crafting/: README.md
fisching/: __init__.py  fishing.py  game.py  inventory.py  models.py  pools.py  utils.py
fisching_overhaul.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
guide/: progression-guide-0-100.html  progression-guide-0-100.md
missions/: README.md  mission.json  placeholder.txt
mutations/: Espiral.json  albino.json  amigo.json  arenoso.json  brilhante.json  caotico.json  carmesim.json  (+18 more)
(+493 files in other folders)
